# p5-software

./: CMakeLists.txt  Grollera.cpp  Grollera.h  Imatge.cpp  Imatge.h  MissatgePrivat.cpp  MissatgePrivat.h  Moderador.cpp  Moderador.h  NoMostrades.cpp  NoMostrades.h  Paraula.cpp  Paraula.h  Prauala.cpp  Prauala.h  TalQual.cpp  TalQual.h  Text.cpp  Text.h  TipusPrivacitat.h  TipusRelacio.h  UsuariRegistrat.cpp  UsuariRegistrat.h  Video.cpp  Video.h  e1.txt  e2.txt  e3.txt  e4.txt  main.cpp
